5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1832_3177.log
== TEST (2019-06-13 18:07:49) 
-- CODE:
x=input(" digit uma string :")
y=x.count("a")
-- ERROR:
File "XXXX", line 3
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:07:58) 
-- CODE:
x=input(" digit uma string :")
y=x.count("a")
print(y)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:32) 
-- CODE:
x=input(" digit uma string :")
y=x.count("a")
r=x.count("e")
g=x.count("i")
f=x.count("o")
l=x.count("u")
print("a:",y)
print("e:",r)
print("i:",g)
print("o:",f)
print("u:",l)
-- OUTPUT:
a: 1
e: 1
i: 1
o: 1
u: 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:09:42) 
-- CODE:
x=input(" digit uma string :")
y=x.count("a")
r=x.count("e")
g=x.count("i")
f=x.count("o")
l=x.count("u")
print("a:",y)
print("e:",r)
print("i:",g)
print("o:",f)
print("u:",l)
-- EXECUTION TIME:
0.57331
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
